# Cell-DEVS-CO2_spread_indoor

./: .gitignore  README.md  User Manual.txt
2&3D_without_pedestrian_behavior/: README.md
2&3D_without_pedestrian_behavior/config/: lab2.json
2&3D_without_pedestrian_behavior/visualization/: lab2-2D visualisation.json
2D_occupants_behavior_apartment/model/: co2_lab_cell.hpp  co2_main.cpp
2D_pedestrian_behavior/: README.md
2D_pedestrian_behavior/config/: floorplanPixelss2_2D.json
2D_pedestrian_behavior/model/: co2_lab_cell.hpp
3D_occupants_behavior_apartment/model/: co2_lab_cell.hpp
3D_pedestrian_behavior/: README.md
apartment_3D_occupants_behavior/: .gitignore  README.md
apartment_3D_occupants_behavior/model/: co2_main.cpp  (+1 more)
computer_lab_2D_pedestrian_behavior/: CMakeLists.txt
computer_lab_basic/: CMakeLists.txt  README.md  output.txt
computer_lab_basic/config/: lab2.json  lab_scenario.json  lab_scenario3D.json  lab_scenario3D_39occupantsTA_40cm.json  validation_scenario3D_12occupants_40cm.json
computer_lab_basic/model/: co2_lab_cell.hpp  co2_main.cpp
computer_lab_basic/visualization/: co2.json  co2_3D.json  co2_3D_40cmCell.json  co2_3D_40cmCellModified.json  lab2-2D visualisation.json
computer_lab_infection/: README.md
config/: lab_scenario.json  lab_scenario3D.json  model3D_JSON.json  output_scenario_big.json  output_scenario_small.json
model/: co2_lab_cell.hpp  co2_main.cpp
random_walk/: FinalTermProjectPaper_AmirHoseein Ghorab.docx  README.md
scripts/: README.md
simple_model/: CMakeLists.txt  README.md
visualization/: co2.json
(+67 files in other folders)
